--- a/ShoppingApp/src/main/resources/application.properties
+++ b/ShoppingApp/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 server.port=8080
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/shoppingApp
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=root
+
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:shoppingApp
 spring.datasource.driverClassName=org.h2.Driver
@@ -7,6 +13,7 @@ spring.datasource.password=password
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+
 #For invalid url exception
 #spring.mvc.throw-exception-if-no-handler-found=true
 #spring.web.resources.add-mappings=false
